opengl: fix YUV packed height display

Regression from 2599e2f7394972ec595b2f14d03bf0fb8f808c46

Fixes #20799

(cherry picked from commit 5547f0277db2333431eaf16e3269d4fbc2e1b09a)
Signed-off-by: Thomas Guillem <thomas@gllm.fr>