modules/video_output/opengl/fragment_shaders.c
@@ -214,7 +214,7 @@ tc_yuv_base_init(opengl_tex_converter_t *tc, GLenum tex_target,
         /* Y1 U Y2 V fits in R G B A */
         tc->tex_count = 1;
         tc->texs[0] = (struct opengl_tex_cfg) {
-            { 1, 2 }, { 1, 2 }, GL_RGBA, GL_RGBA, GL_UNSIGNED_BYTE
+            { 1, 2 }, { 1, 1 }, GL_RGBA, GL_RGBA, GL_UNSIGNED_BYTE
         };
 
         /*
